	20. Export in dynamicsJRLJapan.pc name of classes implementing 
	  - abstractRobotDynamics::CjrlDynamicRobot,
	  - abstractRobotDynamics::CjrlHumanoidDynamicRobot
	  - freeFlying joint,
	  - rotation joint,
	  - translation joint.
	19. Use name "dynamicsJRLJapan" as package name and documentation directory installation.
	
dynamics-JRLJapan 1.4 released July 16, 2007

	18. (fumio) bug fix for values of rotation field in VRML.
	17. (fumio) add default implementations for
        CjrlDynamicRobot::upperBoundDof(int, const vectorN&) and
        CjrlDynamicRobot::lowerBoundDof(int, const vectorN&).

dynamics-JRLJapan 1.3.1 released July 6, 2007

	16. (oussama) Use the wrist joint in
	LinkBetweenJointsAndEndEffectorSemantic() instead of the hand
	joint.
	
dynamics-JRLJapan 1.3 released June 27, 2007

	15. Added separate doc and install-doc targets.
	14. skips comment lines in VRML files.
	13. fix bug in calculation of w and dq in
	DynamicMultiBody::FiniteDifferenceStateUpdate().

dynamics-JRLJapan 1.2 released June 14, 2007

	12. renamed hand related methods to wrist related methods
	(according to abstract interface).
	11. Implemented Hand (CjrlHand) and added attributes m_righthand
	and m_lefthand.
	10. Hard-coded HRP2's hands parallel- mechanism joint update in
	configuration
	9. Removed generated autotools files to avoid conflicts.

dynamics-JRLJapan 1.1 released May 14, 2007

2007/03/09
	8. Removed Makefile.in and configure from version control.
	7. Added @ROBOTDYNAMICS_CFLAGS@ and @ROBOTDYNAMICS_LIBS@ in unitTesting/Makefile.am
	One symbol is still undefined:
	undefined symbol: dgesvd_       (src/.libs/libdynamicsJRLJapan.so)
	6. Moved inclusion of MatrixAbstractLayer.h before other inclusion to make sure
	matrices and vectors are defined.
2007/03/07
	5. The use macros used in Body.h, DynamicBody.h, DynamicMultiBody.h,
	HumanoidDynamicMultiBody.h, Joint.h and MultiBody to define the matrix
	and vector used have been replaced by the typedef: vectorN, matrixNxP,