@@ -4,6 +4,7 @@
 
 SUBDIRS = \
 	src \
+	include \
 	include/robotDynamicsJRLJapan \
 	doc \
 	unitTesting
