@@ -1,0 +1,17 @@
+/*
+ *  Copyright (c) CNRS/AIST, JRL Japan, Olivier Stasse 2007
+ */
+
+#ifndef jrlCIRdynamicsJRLJapan_H
+#define jrlCIRdynamicsJRLJapan_H
+
+#include "dynamicsJRLJapan/fileReader.h"
+#include "dynamicsJRLJapan/Joint.h"
+#include "dynamicsJRLJapan/Body.h"
+#include "dynamicsJRLJapan/DynamicBody.h"
+#include "dynamicsJRLJapan/MultiBody.h"
+#include "dynamicsJRLJapan/DynamicMultiBody.h"
+#include "dynamicsJRLJapan/HumanoidDynamicMultiBody.h"
+
+
+#endif
