@@ -40,7 +40,7 @@
    IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 
-#include "Body.h"
+#include "dynamicsJRLJapan/Body.h"
 
 using namespace dynamicsJRLJapan;
 
