@@ -39,7 +39,7 @@
    IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 
-#include <DynamicBody.h>
+#include "dynamicsJRLJapan/DynamicBody.h"
 
 using namespace dynamicsJRLJapan;
 
