@@ -38,7 +38,7 @@
    STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING 
    IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
-#include "MultiBody.h"
+#include "dynamicsJRLJapan/MultiBody.h"
 
 using namespace dynamicsJRLJapan;
 
